--- a/Frontend/Assets/css/signup.css
+++ b/Frontend/Assets/css/signup.css
@@ -1,6 +1,7 @@
-
 .auth-card {
   position: absolute;
+  width: max-content;
+  height: max-content;
   top: 55%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -9,7 +10,6 @@
   box-shadow: 0 8px 25px rgba(0, 0, 0, 0.2);
   color: #105178 ;
 }
-
 
 .auth-card form {
   display: flex;
@@ -30,7 +30,6 @@
 }
 .auth-card input::placeholder {
   color: black;
-
 }
 .form {
   display: flex;
@@ -47,11 +46,6 @@
   align-self: flex-end;
 }
 
-.flex-column > label {
-  color: #151717;
-  font-weight: 600;
-}
-
 .inputForm {
   border-radius: 10px;
   height: 50px;
@@ -66,7 +60,7 @@
   transition-duration: 0.5s;
 }
 input {
-  color: white;
+  color: black;
   font-size: 0.9rem;
   background-color: transparent;
   height: 50px;
@@ -77,34 +71,12 @@ input {
 }
   
 input::placeholder {
-  color: white;
+  color: black !important;
   opacity: 0.7;
 }
   
 input:focus {
   outline: none;
-}
-
-.flex-row {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 10px;
-  justify-content: space-between;
-}
-
-.flex-row > div > label {
-  font-size: 14px;
-  color: black;
-  font-weight: 400;
-}
-
-.span {
-  font-size: 14px;
-  margin-left: 5px;
-  color: #2d79f3;
-  font-weight: 500;
-  cursor: pointer;
 }
 
 .button-submit {
@@ -126,12 +98,3 @@ input:focus {
   border: 3px solid black;
   transition-duration: 1s;
 }
-
-.p {
-  text-align: center;
-  color: black;
-  font-size: 14px;
-  margin: 5px 0;
-}
-
-    
