--- a/Frontend/Assets/css/signup.css
+++ b/Frontend/Assets/css/signup.css
@@ -1,7 +1,15 @@
+html , body , main , header, div {
+  font-family: "Merriweather", serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
+
+
 .auth-card {
   position: absolute;
-  width: max-content;
-  height: max-content;
   top: 55%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -18,7 +26,7 @@
 }
 
 .auth-card input {
-  padding: 0.75rem 1rem;
+  padding: 1rem 1rem;
   border: none;
   border-radius: 0.5rem;
   font-size: 1rem;
@@ -29,7 +37,7 @@
   width: 100%;
 }
 .auth-card input::placeholder {
-  color: black;
+  color: white;
 }
 .form {
   display: flex;
@@ -39,7 +47,6 @@
   padding: 30px;
   width: 450px;
   border-radius: 20px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .form button {
@@ -47,54 +54,77 @@
 }
 
 .inputForm {
+  border: 2px white solid;
+  color: white;
   border-radius: 10px;
   height: 50px;
+  width: 100%;
   display: flex;
   align-items: center;
-  padding-left: 10px;
+  margin-bottom: 7.5px;
+  padding-left: 15px;
   transition: 0.2s ease-in-out;
   transition-duration: 0.5s;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 .inputForm:focus-within  {
   border: 2px solid black;
+  box-shadow: 0 5px 30px black ;
   transition-duration: 0.5s;
 }
 input {
-  color: black;
-  font-size: 0.9rem;
-  background-color: transparent;
   height: 50px;
-  box-sizing: border-box;
-  border: none;
   width: 100%;
+  padding-right: 10px;
+  padding-left: 10px;
+  background-color: transparent;
+  border-radius: 10px;
+  box-sizing: border-box;
+  transition-duration: 1s;
   transition: border-color 0.3s, box-shadow 0.3s;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
   
 input::placeholder {
-  color: black !important;
-  opacity: 0.7;
+  font-size: 14px;
+  color: white !important;
 }
   
 input:focus {
   outline: none;
+  background-color: transparent;
+  transition-duration: 1s;
 }
 
 .button-submit {
-  margin: 20px 0 10px 0;
+
+  height: 50px;
+  width: 40%;
+  position: relative;
+  left: 25%;
+  margin-top: 15px;
   background-color: transparent;
   backdrop-filter:blur(1px);
-  border: none;
-  color: black;
+  border: 2px solid white;
+  color: white;
   font-size: 15px;
   font-weight: 500;
   border-radius: 10px;
-  height: 50px;
-  width: 100%;
   cursor: pointer;
   transition-duration: 1s;  
 }
 
 .button-submit:hover {
-  border: 3px solid black;
-  transition-duration: 1s;
+  box-shadow: 0 5px 30px rgb(245, 244, 244) ;
+  transition-duration: 0.5s;
+}
+.inputSubmit{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  margin: -10px 20px;
 }
