--- a/Frontend/Assets/css/index.css
+++ b/Frontend/Assets/css/index.css
@@ -115,9 +115,11 @@ main {
 }
 #map { 
     position: absolute;
-    left: 60%;
-    top: 30%;
-    height: 1000px;
-    width: 1000px;
+    left: 70%;
+    top: 40%;
+    height: 700px ;
+    width: 700px;
     border-radius: 500px;
+    border: 5px solid white;
+    box-shadow: 0px 10px 50px white;
 }
