--- a/Frontend/Assets/css/signup.css
+++ b/Frontend/Assets/css/signup.css
@@ -13,39 +13,20 @@ html , body , main , header, div {
   top: 55%;
   left: 50%;
   transform: translate(-50%, -50%);
-  border-radius: 1rem;
+  border-radius: 2rem;
   backdrop-filter: blur(15px);
   box-shadow: 0 8px 25px rgba(0, 0, 0, 0.2);
   color: #105178 ;
 }
 
-.auth-card form {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
-.auth-card input {
-  padding: 1rem 1rem;
-  border: none;
-  border-radius: 0.5rem;
-  font-size: 1rem;
-  outline: none;
-  color: #111;
-  transition: box-shadow 0.3s ease;
-  background: transparent;
-  width: 100%;
-}
-.auth-card input::placeholder {
-  color: white;
-}
 .form {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 50px;
   background-color:transparent;
-  padding: 30px;
-  width: 450px;
+  padding-top: 50px;
+  padding-left: 20%;
+  width: 80%;
   border-radius: 20px;
 }
 
@@ -61,7 +42,7 @@ html , body , main , header, div {
   width: 100%;
   display: flex;
   align-items: center;
-  margin-bottom: 7.5px;
+  margin-bottom: 0px;
   padding-left: 15px;
   transition: 0.2s ease-in-out;
   transition-duration: 0.5s;
@@ -69,7 +50,7 @@ html , body , main , header, div {
   font-weight: 400;
   font-style: normal;
 }
-.inputForm:focus-within  {
+.inputForm:focus-within,.inputForm:hover    {
   border: 2px solid black;
   box-shadow: 0 5px 30px black ;
   transition-duration: 0.5s;
@@ -102,16 +83,15 @@ input:focus {
 
 .button-submit {
   position: relative;
-  height: 50px;
+  height: 40px;
   width: 40%;
   transform: translate(75%, 25%);
-
 
   backdrop-filter:blur(1px);
   background-color: transparent;
 
   border-radius: 10px;
-  border: 1px solid white;
+  border: 0px solid white;
  
   color: white;
   font-size: 15px;
@@ -132,4 +112,7 @@ input:focus {
 }
 #cardName ,#cardNumber , #cvv , #expiryDate{
   border-radius: 5px !important;
+}
+#CC{
+  margin-top: 15%;
 }
