--- a/Frontend/Assets/css/signin.css
+++ b/Frontend/Assets/css/signin.css
@@ -89,7 +89,7 @@ label{
 .span {
   font-size: 14px;
   margin-left: 5px;
-  color: rgb(111, 111, 111);
+  color: rgb(236, 236, 236);
   font-weight: 500;
   cursor: pointer;
 }
@@ -110,7 +110,7 @@ label{
   transition-duration: 1s;  
 }
 .button-submit:hover {
-  box-shadow: 0 5px 30px rgb(245, 244, 244) ;
+  box-shadow: 0px 10px 30px 5px rgb(245, 244, 244) ;
   transition-duration: 0.5s;
 }
 
@@ -144,7 +144,7 @@ label{
   font-weight: 400;
   font-style: normal;
   text-decoration: none;
-  color: rgb(111, 111, 111);
+  color: rgb(238, 234, 234);
   cursor: pointer;
   text-decoration: underline;
 }
