Gathered signup forms in 1

--- a/Frontend/Assets/css/forms.css
+++ b/Frontend/Assets/css/forms.css
@@ -53,7 +53,10 @@ label{
   display: flex;
   align-items: center;
   flex-direction:column;
-  padding: 30px;
+  padding-top: 50px;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-bottom: 30px;
   border-radius: 20px;
 }
 
