--- a/Assets/css/index.css
+++ b/Assets/css/index.css
@@ -12,7 +12,6 @@ body {
     margin: 0;
     padding: 0;
     color: black;
-    overflow: hidden;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -36,7 +35,7 @@ body {
     left: 0;
     height: 100%;
     width: 100%;
-    background-size: 120%; /* allow space to pan */
+    background-size: 120%;
     background-repeat: no-repeat;
     background-position: center;
     opacity: 0;
