--- a/Assets/css/index.css
+++ b/Assets/css/index.css
@@ -1,24 +1,27 @@
-html , body , main , header ,div {
-    font-family: "Merriweather", serif;
+
+html, body, main, header {
+    font-family: "Poppins", sans-serif;
     font-optical-sizing: auto;
-    font-weight: 700;
     font-style: normal;
-    font-variation-settings:
-      "wdth" 100;
+    font-variation-settings: "wdth" 100;
 }
 
+
 body {
-    height: 100%;
     margin: 0;
     padding: 0;
+    height: 100%;
     color: black;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    animation: panBackground 30s linear infinite;
-    height: 100%;
+    animation: panBackgroundBody 30s linear infinite;
 }
 
+#domain{
+    font-size: 20px;
+    font-weight: 700;
+}
 
 #background-container {
     position: fixed;
@@ -44,122 +47,113 @@ body {
 
 .bg-layer.visible {
     opacity: 1;
-    animation: panBackground 60s linear infinite;
-}
-
-@keyframes panBackground {
-    0% {
-        background-position: 0% 50%;
-    }
-    100% {
-        background-position: 100% 0%;
-    }
+    animation: panBackgroundLayer 60s linear infinite;
 }
 
 
+@keyframes panBackgroundBody {
+    0% { background-position: 0% 50%; }
+    100% { background-position: 100% 0%; }
+}
+
+@keyframes panBackgroundLayer {
+    0% { background-position: 0% 0%; }
+    100% { background-position: 100% 100%; }
+}
 
 
 header {
+    position: fixed;
+    top: 0;
+    width: 100%;
     background-color: transparent;
     backdrop-filter: blur(10px);
     color: white;
     padding: 1rem 10%;
-    position: relative;
     z-index: 1;
 }
 
+
 main {
+    margin-top: 10vh;
     padding: 2% 10% 0;
     justify-content: center;
     align-items: center;
     align-self: center;
-    background-image:url('Assets/src/Bg1.jpg');
-    transition: panBackground 1s ease-in-out;
-}
-
-@keyframes panBackground {
-    0% {
-        background-position: 0% 0%;
-    }
-    100% {
-        background-position: 100% 100%;
-    }
+    background-image: url('Assets/src/Bg1.jpg');
+    animation: panBackgroundLayer 60s linear infinite;
 }
 
 
-.widget-btn , .widget-btn-inverse , .widget-btn-inverse:hover , .widget-btn:hover {
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-}
-.widget-btn {
-    border: 1px solid;
+.nav-btn {
+    border: 1px solid black;
     color: white;
     border-radius: 10px;
     background-color: black;
     padding: 8px 15px;
-    border-color: black;
     transition-duration: 0.5s;
 }
 
-.widget-btn:hover {
-    border: 2px solid;
+.nav-btn:hover {
+    border: 2px solid black;
     color: black;
-    border-color: black;
     background-color: white;
     transition-duration: 1s;
 }
-.widget-btn-inverse {
-    border: 2px solid;
+
+.nav-btn-inverse {
+    border: 2px solid black;
     color: black;
+    background-color: white;
     padding: 8px 15px;
     border-radius: 10px;
-    border-color: black;
-    background-color: white;
     transition-duration: 1s;
 }
-.widget-btn-inverse:hover {
-    border: 2px solid;
+
+.nav-btn-inverse:hover {
+    border: 2px solid white;
     color: white;
-    border-color: white;
     background-color: black;
     transition-duration: 1s;
 }
 
+.main-btn {
+    border: 1px solid black;
+    color: white;
+    border-radius: 10px;
+    background-color: black;
+    padding: 8px 15px;
+    transition-duration: 0.5s;
+    position: absolute;
+    bottom: 15vh;
+    left: 48%;
+}
+
+.main-btn:hover {
+    border: 2px solid black;
+    color: black;
+    background-color: white;
+    transition-duration: 1s;
+}
 
 .intro {
     margin-top: 50px;
 }
 
-.title {
-    color: white;
-    font-size: 3.75rem;
-    font-weight: 700;
-}
-
-.bio {
-    color: white;
-    font-size: 20px;
-    margin-top: 20px;
-    margin-bottom: 25px;
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-}
-
-.nav-btn {
-    background-color: #f5f3e7;
-    border-radius: 5px;
-    padding: 5px;
-    color: black;
-}
-
-#map { 
+.dropdown-wrapper {
+    position: relative;
+  }
+  
+  .dropdown {
     position: absolute;
-    left: 28%;
-    top: 14%;
-    height: 140px ;
-    width: 140px;
-    border-radius: 500px;
-    border: 3px solid white;
-}
+    top: 100%;
+    left: 0;
+    background: white;
+    border: 1px solid #ccc;
+    padding: 10px;
+    z-index: 1000;
+  }
+  
+  .hidden {
+    display: none;
+  }
