alot of trouble

--- a/Admin/Assets/css/styles.css
+++ b/Admin/Assets/css/styles.css
@@ -2023,7 +2023,7 @@ button {
 }
 .status-select{
     padding: 10px 20px;
-    border-radius: 10px;
+    border-radius: 10px;<
     border: 0 ;
     outline: 0;
 }
