--- a/Assets/css/index.css
+++ b/Assets/css/index.css
@@ -1,13 +1,4 @@
-
-html, body, main, header {
-    font-family: "Poppins", sans-serif;
-    font-optical-sizing: auto;
-    font-style: normal;
-    font-variation-settings: "wdth" 100;
-}
-
-
-body {
+html, body {
     margin: 0;
     padding: 0;
     height: 100%;
@@ -16,12 +7,16 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     animation: panBackgroundBody 30s linear infinite;
+    overflow: hidden;
 }
 
-#domain{
-    font-size: 20px;
-    font-weight: 700;
+html , body , main {
+    font-family: "Poppins", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-variation-settings: "wdth" 100;
 }
+
 
 #background-container {
     position: fixed;
@@ -50,7 +45,6 @@ body {
     animation: panBackgroundLayer 60s linear infinite;
 }
 
-
 @keyframes panBackgroundBody {
     0% { background-position: 0% 50%; }
     100% { background-position: 100% 0%; }
@@ -62,21 +56,9 @@ body {
 }
 
 
-header {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    background-color: transparent;
-    backdrop-filter: blur(10px);
-    color: white;
-    padding: 1rem 10%;
-    z-index: 1;
-}
 
 
 main {
-    margin-top: 10vh;
-    padding: 2% 10% 0;
     justify-content: center;
     align-items: center;
     align-self: center;
@@ -117,43 +99,136 @@ main {
     transition-duration: 1s;
 }
 
-.main-btn {
-    border: 1px solid black;
-    color: white;
-    border-radius: 10px;
-    background-color: black;
-    padding: 8px 15px;
-    transition-duration: 0.5s;
-    position: absolute;
-    bottom: 15vh;
-    left: 48%;
-}
-
-.main-btn:hover {
-    border: 2px solid black;
-    color: black;
-    background-color: white;
-    transition-duration: 1s;
-}
 
 .intro {
     margin-top: 50px;
 }
 
-.dropdown-wrapper {
-    position: relative;
-  }
-  
-  .dropdown {
+.title {
     position: absolute;
-    top: 100%;
-    left: 0;
-    background: white;
-    border: 1px solid #ccc;
-    padding: 10px;
-    z-index: 1000;
+    top: 20%;
+    left: 10%;
+    color: white;
+    font-size: 5rem;
+    font-weight: 700;
+}
+
+.bio {
+    position: absolute;
+    top: 35%;
+    left: 10%;
+    color: white;
+    font-size: 20px;
+    font-weight: 300;
+    margin-top: 20px;
+    margin-bottom: 25px;
+    text-align: left;
+    font-family: "Poppins", sans-serif;
+}
+
+
+.main-btn {
+    position: absolute;
+    top: 60%;
+    left: 15%;
+    border: 1px solid black;
+    color: white;
+    border-radius: 25px;
+    background-color: black;
+    padding: 20px 35px;
+    transition-duration: 0.5s;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.main-btn:hover {
+    border: 2px solid white;
+    color: black;
+    background-color: white;
+    scale: 1.1;
+    transition-duration: 1s;
+}
+
+
+#map {
+    position: absolute;
+    top: 40%;
+    left: 60%;
+    height: 400px;
+    width: 400px;
+    border-radius: 500px;
+    border: 3px solid white;
+}
+.loader {
+    position: relative;
+    width: 200px;
+    height: 200px;
+    background: transparent;
+    border-radius: 50%;
+    box-shadow: 25px 25px 75px rgba(0,0,0,0.55);
+    border: 1px solid #333;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    top: 25%;
+    left :25%; 
   }
   
-  .hidden {
-    display: none;
+  .loader::before {
+    content: '';
+    position: absolute;
+    inset: 20px;
+    background: transparent;
+    border: 1px dashed#444;
+    border-radius: 50%;
+    box-shadow: inset -5px -5px 25px rgba(0,0,0,0.25),
+    inset 5px 5px 35px rgba(0,0,0,0.25);
+  }
+  
+  .loader::after {
+    content: '';
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 1px dashed#444;
+    box-shadow: inset -5px -5px 25px rgba(0,0,0,0.25),
+    inset 5px 5px 35px rgba(0,0,0,0.25);
+  }
+  
+  .loader span {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 50%;
+    height: 100%;
+    background: transparent;
+    transform-origin: top left;
+    animation: radar81 2s linear infinite;
+    border-top: 1px dashed #fff;
+  }
+  
+  .loader span::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: seagreen;
+    transform-origin: top left;
+    transform: rotate(-55deg);
+    filter: blur(30px) drop-shadow(20px 20px 20px seagreen);
+  }
+  
+  @keyframes radar81 {
+    0% {
+      transform: rotate(0deg);
+    }
+  
+    100% {
+      transform: rotate(360deg);
+    }
   }
