--- a/Assets/css/pwd.css
+++ b/Assets/css/pwd.css
@@ -7,9 +7,6 @@ html , body , main , header , div {
     "wdth" 100;
 }
 
-#domain{
-  font-family: 'Poppins', sans-serif; font-weight: 700; font-style: normal;
-}
 main{
   position: relative;
   width: max-content;
@@ -19,7 +16,6 @@ main{
 }
 
 .auth-card {
-  margin-top: 100px;
   border-radius: 1rem;
   backdrop-filter: blur(15px);
   box-shadow: 0px 15px 100px rgba(0, 0, 0, 0.5);
@@ -51,7 +47,7 @@ label{
   color: white !important;
 }
 
-.form { 
+.signinForm { 
   align-items: center;
   padding-top: 50px;
   padding-left: 30px;
@@ -59,6 +55,17 @@ label{
   padding-bottom: 30px;
   border-radius: 20px;
 }
+
+.signupForm{
+  align-items: center;
+  padding-top: 35px;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-bottom: 20px;
+  border-radius: 20px;
+}
+
+
 
 .form #countries, .form #gender{
   margin-bottom: 1rem;
