--- a/public/css/header.css
+++ b/public/css/header.css
@@ -20,3 +20,26 @@ header {
     color: #fff;
     text-decoration: none;
 }
+
+.dropdown {
+    top: 100%;
+    left: 0;
+    border: 1px solid #ccc;
+    border-radius: 25px;
+    padding: 5px 7.5px;
+}
+
+#google_translate_element span{
+    display: none;
+}
+#google_translate_element{
+    color: white;
+    outline: none;
+}
+select.goog-te-combo {
+    padding: 5px;
+    border-radius: 10px;
+    width: 80%;
+    justify-self: center;
+    border: 0;
+}
