--- a/public/css/pwd.css
+++ b/public/css/pwd.css
@@ -6,17 +6,23 @@ html , body , main , header , div {
   font-variation-settings:
     "wdth" 100;
 }
+body{
+  overflow: hidden;
+}
 
 main{
   position: relative;
-  width: max-content;
+  width: 100%;
+  height: 100%;
   justify-self: center;
   transition-duration: 1s;
   height: 500px;
 }
 
 .auth-card {
-  margin-top: 40%;
+  position: absolute;
+  left: 40%;
+  top: 30%;
   border-radius: 1rem;
   backdrop-filter: blur(15px);
   box-shadow: 0px 15px 100px rgba(0, 0, 0, 0.5);
@@ -26,10 +32,10 @@ main{
 .auth-card form {
   display: flex;
   flex-direction: column;
-  padding-top: 50px;
+  padding-top: 100px;
   padding-left: 30px;
   padding-right: 30px;
-  padding-bottom: 30px;
+  padding-bottom: 60px;
 }
 
 .auth-card input {
@@ -246,9 +252,8 @@ select , select option {
 
 }
 .fma{
-  margin-bottom: 20px;
   font-family: "Poppins", sans-serif;
   align-self: center;
   text-align: center;
-  font-size: 2rem;
+  font-size: 1.3rem;
 }
